--- a/digweb/digweb/templates/openVeiw/service.html
+++ b/digweb/digweb/templates/openVeiw/service.html
@@ -16,7 +16,7 @@
   <meta name="author" content="" />
   <link rel="shortcut icon" href="{% static 'images/s4.png' %}" type="image/x-icon">
 
-  <title>َAI TEC</title>
+  <title>َAI TEC | Services</title>
 
   <!-- bootstrap core css -->
   <link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap.css' %}" />
