--- a/digweb/digweb/templates/persianPage/strokepr.html
+++ b/digweb/digweb/templates/persianPage/strokepr.html
@@ -17,7 +17,7 @@
   <meta name="author" content="" />
   <link rel="shortcut icon" href="{% static 'images/s4.png' %}" type="image/x-icon">
 
-  <title>خانه هوش مصنوعی</title>
+  <title>خانه هوش مصنوعی | محاسبه ریسک سکته</title>
 
   <!-- bootstrap core css -->
   <link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap.css' %}" />
