--- a/digweb/digweb/templates/openVeiw/cvd.html
+++ b/digweb/digweb/templates/openVeiw/cvd.html
@@ -24,7 +24,7 @@
   <meta name="keywords" content="" />
   <meta name="description" content="" />
   <meta name="author" content="" />
-  <link rel="shortcut icon" href="{% static 'images/s4.png' %}" type="image/x-icon">
+  <link rel="shortcut icon" href="{% static 'images/logo.png' %}" type="image/x-icon">
 
   <title>AI TEC | CVD predictor</title>
 
