--- a/digweb/digweb/templates/openVeiw/service.html
+++ b/digweb/digweb/templates/openVeiw/service.html
@@ -14,9 +14,9 @@
   <meta name="keywords" content="" />
   <meta name="description" content="" />
   <meta name="author" content="" />
-  <link rel="shortcut icon" href="{% static 'images/s4.png' %}" type="image/x-icon">
+  <link rel="shortcut icon" href="{% static 'images/logo.png' %}" type="image/x-icon">
 
-  <title>َAI TEC | Services</title>
+  <title>AI TEC | Services</title>
 
   <!-- bootstrap core css -->
   <link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap.css' %}" />
