--- a/digweb/digweb/templates/openVeiw/index.html
+++ b/digweb/digweb/templates/openVeiw/index.html
@@ -14,7 +14,7 @@
   <meta name="keywords" content="" />
   <meta name="description" content="" />
   <meta name="author" content="" />
-  <link rel="shortcut icon" href="{% static 'images/aitec.jpg' %}" type="image/x-icon">
+  <link rel="shortcut icon" href="{% static 'images/logo.png' %}" type="image/x-icon">
 
   <title>AI Tec | Homepage</title>
 
