--- a/digweb/digweb/templates/persianPage/cvdpr.html
+++ b/digweb/digweb/templates/persianPage/cvdpr.html
@@ -15,7 +15,7 @@ var page_number=1;
   <meta name="keywords" content="" />
   <meta name="description" content="" />
   <meta name="author" content="" />
-  <link rel="shortcut icon" href="{% static 'images/s4.png' %}" type="image/x-icon">
+  <link rel="shortcut icon" href="{% static 'images/logo.png' %}" type="image/x-icon">
 
   <title>خانه هوش مصنوعی | محاسبه ریسک قلبی</title>
 
