--- a/digweb/digweb/templates/openVeiw/ckd.html
+++ b/digweb/digweb/templates/openVeiw/ckd.html
@@ -44,6 +44,8 @@
   <link href="{% static 'css/responsive.css' %}" rel="stylesheet" />
   <!-- java script function for calculate risk  -->
   <script src="{% static 'js/function_disease.js' %}"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+
 </head>
 
 <body class="sub_page">
@@ -94,7 +96,7 @@
     <div class="container">
       <div class="row">
         <div class="col">
-          <form>
+          <form id="post-ckd">{%csrf_token%}
             <h4>
               <span class="design_dot"></span>
               Chronic Kidney Disease Predictor
@@ -102,12 +104,12 @@
             <div class="form-row ">
               <div class="form-group col-lg-4">
                 <label for="inputPatientAge">Age </label>
-                <input type="number" class="form-control" id="inputPatientAge" name="PatientAge" placeholder="" step="1" onchange="this.value = Math.max(0, Math.min(120, parseInt(this.value)));">
+                <input type="number" class="form-control" id="inputPatientAge" name="inputPatientAge" placeholder="" step="1" onchange="this.value = Math.max(0, Math.min(120, parseInt(this.value)));">
               </div>
 
               <div class="form-group col-lg-4">
                 <label for="inputPatientGender">Gender</label>
-                <select name="" class="form-control wide" id="inputPatientGender">
+                <select name="inputPatientGender" class="form-control wide" id="inputPatientGender">
                   <option value=0>Male</option>
                   <option value=1>Female </option>
                 </select>
@@ -116,29 +118,29 @@
               <div class="form-group col-lg-4">
                 <br>
                 <br>
-                <input type="checkbox" id="inputPatientAnemia" name="checkbox1" value=1 class="control__indicator">
-                <label for="inputPationtAnemia" class="check-box">Do you have Anemia ?</label>
+                <input type="checkbox" id="inputPatientAnemia" name="inputPatientAnemia" value=1 class="control__indicator">
+                <label for="inputPatientAnemia" class="check-box">Do you have Anemia ?</label>
               </div>
             </div>
             <div class="form-row ">
               <div class="form-group col-lg-4">
                 <br>
                 <br>
-                <input type="checkbox" id="inputPatientDrugHistory" name="checkbox1" value="1" class="control__indicator">
-                <label for="inputPationtDrugHistory" class="check-box">Do you have History of use Drug ?</label>
+                <input type="checkbox" id="inputPatientDrugHistory" name="inputPatientDrugHistory" value="1" class="control__indicator">
+                <label for="inputPatientDrugHistory" class="check-box">Do you have History of use Drug ?</label>
               </div>
 
               <div class="form-group col-lg-4">
                 <br>
                 <br>
-                <input type="checkbox" id="inputPatientHypertension" name="checkbox1" value="1" class="control__indicator">
-                <label for="inputPationtHypertension" class="check-box">Do you have Hypertension ?</label>
+                <input type="checkbox" id="inputPatientHypertension" name="inputPatientHypertension" value="1" class="control__indicator">
+                <label for="inputPatientHypertension" class="check-box">Do you have Hypertension ?</label>
               </div>
               
               <div class="form-group col-lg-4">
                 <br>
                 <br>
-                <input type="checkbox" id="inputPationtHistoryCVD" name="checkbox2" value="1" class="control__indicator">
+                <input type="checkbox" id="inputPationtHistoryCVD" name="inputPationtHistoryCVD" value="1" class="control__indicator">
                 <label for="inputPationtHistoryCVD">Do you have History of cardiovascular disease ? </label>
                 </div>
             </div>
@@ -146,15 +148,15 @@
             <div class="form-row ">
               <div class="form-group col-lg-4">
                 
-                <input type="checkbox" id="inputPationtHistoryCHF" name="checkbox3" value="1" class="control__indicator">
+                <input type="checkbox" id="inputPationtHistoryCHF" name="inputPationtHistoryCHF" value="1" class="control__indicator">
                 <label for="inputPationtHistoryCHF">Do you have history of Congestive heart failure ?</label>
               </div>
               <div class="form-group col-lg-4">
-                <input type="checkbox" id="inputPationtPVD" name="checkbox4" value="1" class="control__indicator">
+                <input type="checkbox" id="inputPationtPVD" name="inputPationtPVD" value="1" class="control__indicator">
                 <label for="inputPationtPVD">Do you have Peripheral vascular disease ?</label>
               </div>
               <div class="form-group col-lg-4">
-                <input type="checkbox" id="inputPationtProteinuria" name="checkbox4" value="1" class="control__indicator">
+                <input type="checkbox" id="inputPationtProteinuria" name="inputPationtProteinuria" value="1" class="control__indicator">
                 <label for="inputPationtProteinuria">Do you have Proteinuria ?</label>
               </div>
             </div>
@@ -162,15 +164,18 @@
             <div class="form-row ">
               <div class="form-group col-lg-4">
                 
-                <input type="checkbox" id="inputPationtDM" name="checkbox3" value="1" class="control__indicator">
+                <input type="checkbox" id="inputPationtDM" name="inputPationtDM" value="1" class="control__indicator">
                 <label for="inputPationtDM">Do you have Diabetes mellitus ?</label>
               </div>
-              
+              <div class="form-group col-lg-4">
+                <label for="inputidnumber">id number </label>
+                <input type="number" class="form-control" id="inputidnumber" name="inputidnumber" placeholder="" step="1" onchange="this.value = Math.max(0, Math.min(9999999999, parseInt(this.value)));">
+              </div>
             </div>
             
 
             <div class="btn-box">
-              <button type="button" class="btn " onclick="ckd_Results();">Calculate Now</button>
+              <button type="submit" class="btn " onclick="ckd_Results();">Calculate Now</button>
             </div>
           </form>
         </div>
@@ -325,5 +330,35 @@
   <!-- footer section -->
 
 </body>
+<script type="text/javascript">
+  $(document).on('submit','#post-ckd',function(e){
+    e.preventDefault();
+    $.ajax({
+      type:'POST',
+      url:'create/',
+      data:{
+        inputidnumber:$('#inputidnumber').val(),
+        inputPatientAge:$('#inputPatientAge').val(),
+        inputPatientGender:$('#inputPatientGender').val(),
+        
+        inputPationtProteinuria:($("#inputPationtProteinuria:checked").prop("checked") == true ? 1 : 0),
+        inputPatientAnemia:($("#inputPatientAnemia:checked").prop("checked") == true ? 1 : 0),
+        inputPatientDrugHistory:($("#inputPatientDrugHistory:checked").prop("checked") == true ? 1 : 0),
+        inputPatientHypertension:($("#inputPatientHypertension:checked").prop("checked") == true ? 1 : 0),
+        inputPationtHistoryCVD:($("#inputPationtHistoryCVD:checked").prop("checked") == true ? 1 : 0),
+        inputPationtHistoryCHF:($("#inputPationtHistoryCHF:checked").prop("checked") == true ? 1 : 0),
+        inputPationtPVD:($("#inputPationtPVD:checked").prop("checked") == true ? 1 : 0),
+        inputPationtDM:($("#inputPationtDM:checked").prop("checked") == true ? 1 : 0),
 
+        csrfmiddlewaretoken:$('input[name=csrfmiddlewaretoken]').val()
+
+      },
+      success: function (){
+
+      }
+    });
+  });
+
+  
+</script>
 </html>
