--- a/digweb/digweb/templates/openVeiw/diabetes.html
+++ b/digweb/digweb/templates/openVeiw/diabetes.html
@@ -44,6 +44,8 @@
   <link href="{% static 'css/responsive.css' %}" rel="stylesheet" />
   <!-- java script function for calculate risk  -->
   <script src="{% static 'js/function_disease.js' %}"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+
 </head>
 
 <body class="sub_page">
@@ -94,45 +96,45 @@
     <div class="container">
       <div class="row">
         <div class="col">
-          <form method="POST">{%csrf_token%}
+          <form id="post-diabetes" >{%csrf_token%}
             <h4>
-              <span class="design_dot"></span>
+              <span class="design_dot" ></span>
               Diabetes Predictor
             </h4>
             <div class="form-row ">
               <div class="form-group col-lg-4">
-                <label for="inputPatientAge">Age </label>
-                <input type="number" class="form-control" id="inputDiabetesAge" name="DiabetesAge" placeholder="" step="1" onchange="this.value = Math.max(0, Math.min(120, parseInt(this.value)));">
+                <label for="inputDiabetesAge">Age </label>
+                <input type="number" class="form-control" id="inputDiabetesAge" name="inputDiabetesAge" placeholder="" step="1" onchange="this.value = Math.max(0, Math.min(120, parseInt(this.value)));">
               </div>
 
               <div class="form-group col-lg-4">
                 <label for="inputPatientGender">Gender</label>
-                <select name="PatientGender" class="form-control wide" id="inputPatientGender">
+                <select name="inputPatientGender" class="form-control wide" id="inputPatientGender">
                   <option value=0>Male</option>
                   <option value=1>Female </option>
                 </select>
               </div>
 
               <div class="form-group col-lg-4">
-                <label for="inputPatientWeight">Weight (Kg) </label>
-                <input type="number" name="PatientWeight" class="form-control" id="inputDiabetesWeight" placeholder="" step="1" onchange="this.value = Math.max(40, Math.min(250, parseInt(this.value)));">
+                <label for="inputDiabetesWeight">Weight (Kg) </label>
+                <input type="number" name="inputDiabetesWeight" class="form-control" id="inputDiabetesWeight" placeholder="" step="1" onchange="this.value = Math.max(40, Math.min(250, parseInt(this.value)));">
               </div>
             </div>
             <div class="form-row ">
               <div class="form-group col-lg-4">
                 <label for="inputPatientWaist">Waist (cm)</label>
-                <input type="number" name="PatientWaist" class="form-control" id="inputPatientWaist" placeholder="" step="1" onchange="this.value = Math.max(40, Math.min(150, parseInt(this.value)));">
+                <input type="number" name="inputPatientWaist" class="form-control" id="inputPatientWaist" placeholder="" step="1" onchange="this.value = Math.max(40, Math.min(150, parseInt(this.value)));">
               </div>
 
               <div class="form-group col-lg-4">
                 <label for="inputPatientHeight">Height (cm)</label>
-                <input type="number" name="PatientHeight" class="form-control" id="inputPatientHeight" placeholder="" step="1" onchange="this.value = Math.max(40, Math.min(250, parseInt(this.value)));">
+                <input type="number" name="inputPatientHeight" class="form-control" id="inputPatientHeight" placeholder="" step="1" onchange="this.value = Math.max(40, Math.min(250, parseInt(this.value)));">
               </div>
               
               <div class="form-group col-lg-4">
                 <br>
                 <br>
-                <input type="checkbox" id="inputPationtPhysicalActivity" name="PationtPhysicalActivity" value="1" class="control__indicator">
+                <input type="checkbox" id="inputPationtPhysicalActivity" name="inputPationtPhysicalActivity" value="1" class="control__indicator">
                 <label for="inputPationtPhysicalActivity">Do yo have physical activity for more than 30 minutes every day? </label>
                 </div>
             </div>
@@ -140,28 +142,28 @@
             <div class="form-row ">
               <div class="form-group col-lg-4">
                 
-                <input type="checkbox" id="inputPationtGlucose" name="PationtGlucose" value="1" class="control__indicator">
+                <input type="checkbox" id="inputPationtGlucose" name="inputPationtGlucose" value="1" class="control__indicator">
                 <label for="inputPationtGlucose">Do you have History of family glucose ?</label>
               </div>
               <div class="form-group col-lg-4">
                 
-                <input type="checkbox" id="inputPationtVegetables" name="PationtVegetables" value="1" class="control__indicator">
-                <label for="inputPationtGlucose">Do you have Daily consumption of vegetables, fruits, or berries ?</label>
+                <input type="checkbox" id="inputPationtVegetables" name="inputPationtVegetables" value="1" class="control__indicator">
+                <label for="inputPationtVegetables">Do you have Daily consumption of vegetables, fruits, or berries ?</label>
               </div>
               <div class="form-group col-lg-4">
                 <br>
                 <br>
-                <input type="checkbox" id="inputPatientDrugHistory" name="PatientDrugHis" value="1" class="control__indicator" >
-                <label for="inputPationtDrugHistory" class="check-box">Do you have History of use Drug ?</label>
+                <input type="checkbox" id="inputPatientDrugHistory" name="inputPatientDrugHistory" value="1" class="control__indicator" >
+                <label for="inputPatientDrugHistory" class="check-box">Do you have History of use Drug ?</label>
               </div>
               <div class="form-group col-lg-4">
                 <label for="inputidnumber">ID number </label>
-                <input type="number" class="form-control" id="inputidnumber" name="idnumber" placeholder="" step="1" onchange="this.value = Math.max(0, Math.min(9999999999, parseInt(this.value)));">
+                <input type="number" class="form-control" id="inputidnumber" name="inputidnumber" placeholder="" step="1" onchange="this.value = Math.max(0, Math.min(9999999999, parseInt(this.value)));">
               </div>
             </div>
 
             <div class="btn-box">
-              <button type="submit" class="btn " onclick="diabetes_Results();">Calculate Now</button>
+              <button type="submit" class="btn" onclick="diabetes_Results();">Calculate Now</button>
             </div>
           </form>
         </div>
@@ -316,5 +318,31 @@
   <!-- footer section -->
 
 </body>
+<script type="text/javascript">
+  $(document).on('submit','#post-diabetes',function(e){
+    e.preventDefault();
+    $.ajax({
+      type:'POST',
+      url:'create/',
+      data:{
+        inputidnumber:$('#inputidnumber').val(),
+        inputDiabetesAge:$('#inputDiabetesAge').val(),
+        inputDiabetesWeight:$('#inputDiabetesWeight').val(),
+        inputPatientHeight:$('inputPatientHeight').val(),
+        inputPatientWaist:$('#inputPatientWaist').val(),
+        inputPatientGender:$('#inputPatientGender').val(),
+        inputPatientDrugHistory:($("#inputPatientDrugHistory:checked").prop("checked") == true ? 1 : 0),
+        inputPationtVegetables:($("#inputPationtVegetables:checked").prop("checked") == true ? 1 : 0),
+        inputPationtGlucose:($("#inputPationtGlucose:checked").prop("checked") == true ? 1 : 0),
+        csrfmiddlewaretoken:$('input[name=csrfmiddlewaretoken]').val()
 
+      },
+      success: function (){
+
+      }
+    });
+  });
+
+  
+</script>
 </html>
