--- a/digweb/digweb/templates/openVeiw/stroke.html
+++ b/digweb/digweb/templates/openVeiw/stroke.html
@@ -44,6 +44,8 @@
   <link href="{% static 'css/responsive.css' %}" rel="stylesheet" />
   <!-- java script function for calculate risk  -->
   <script src="{% static 'js/function_disease.js' %}"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+
 </head>
 
 <body class="sub_page">
@@ -94,7 +96,7 @@
     <div class="container">
       <div class="row">
         <div class="col">
-          <form>
+          <form id="post-stroke">{%csrf_token%}
             <div class="form-row "></div>
 
             <h4>
@@ -104,20 +106,20 @@
             <div class="form-row ">
               <div class="form-group col-lg-4">
                 <label for="inputPatientAge">Age </label>
-                <input type="number" class="form-control" id="inputPatientAge" name="PationtAge" placeholder="" step="1" onchange="this.value = Math.max(0, Math.min(120, parseInt(this.value)));">
+                <input type="number" class="form-control" id="inputPatientAge" name="inputPatientAge" placeholder="" step="1" onchange="this.value = Math.max(0, Math.min(120, parseInt(this.value)));">
               </div>
 
               <div class="form-group col-lg-4">
                 <label for="inputPatientSBPHistory">Sistolic Blood pressure (mm/hg)</label>
-                <input type="number" class="form-control" id="inputPatientSBPHistory" name="PationtAge" placeholder="" step="1" onchange="this.value = Math.max(80, Math.min(200, parseInt(this.value)));">
+                <input type="number" class="form-control" id="inputPatientSBPHistory" name="inputPatientSBPHistory" placeholder="" step="1" onchange="this.value = Math.max(80, Math.min(200, parseInt(this.value)));">
               
               </div>
 
               <div class="form-group col-lg-4">
                 <label for="inputPatientGender">Gender</label>
-                <select name="" class="form-control wide" id="inputPatientGender">
-                  <option value=1>Male</option>
-                  <option value=2>Female </option>
+                <select name="inputPatientGender" class="form-control wide" id="inputPatientGender">
+                  <option value=0>Male</option>
+                  <option value=1>Female </option>
                 </select>
                 </div>
             </div>
@@ -125,8 +127,8 @@
               <div class="form-group col-lg-4">
                 <br>
                 <br>
-                <input type="checkbox" id="inputPatientDrugHistory" name="checkbox1" value="1" class="control__indicator">
-                <label for="inputPationtDrugHistory" class="check-box">Do you use related medicine?</label>
+                <input type="checkbox" id="inputPatientDrugHistory" name="inputPatientDrugHistory" value="1" class="control__indicator">
+                <label for="inputPatientDrugHistory" class="check-box">Do you use related medicine?</label>
               
                 
               </div>
@@ -134,14 +136,14 @@
               <div class="form-group col-lg-4">
                 <br>
                 <br>
-                <input type="checkbox" id="inputPatientDiabetes" name="checkbox1" value="1" class="control__indicator">
+                <input type="checkbox" id="inputPatientDiabetes" name="inputPatientDiabetes" value="1" class="control__indicator">
                 <label for="inputPatientDiabetes" class="check-box">Do you have Diabetes ?</label>
               </div>
               
               <div class="form-group col-lg-4">
                 <br>
                 <br>
-                <input type="checkbox" id="inputPationtSmoke" name="checkbox2" value="1" class="control__indicator">
+                <input type="checkbox" id="inputPationtSmoke" name="inputPationtSmoke" value="1" class="control__indicator">
                 <label for="inputPationtSmoke">Do you smoke? </label>
                 </div>
             </div>
@@ -150,29 +152,29 @@
               <div class="form-group col-lg-4">
                 <br>
                 <br>
-                <input type="checkbox" id="inputPationtCVD" name="checkbox3" value="1" class="control__indicator">
-                <label for="inputPationtGlucose">Do you have cardiovascular disease ? </label>
+                <input type="checkbox" id="inputPationtCVD" name="inputPationtCVD" value="1" class="control__indicator">
+                <label for="inputPationtCVD">Do you have cardiovascular disease ? </label>
               </div>
               <div class="form-group col-lg-4">
                 <br>
                 <br>
-                <input type="checkbox" id="inputPationtAF" name="checkbox4" value="1" class="control__indicator">
-                <label for="inputPationtGlucose">Do you have Atrial fibrillation ?</label>
+                <input type="checkbox" id="inputPationtAF" name="inputPationtAF" value="1" class="control__indicator">
+                <label for="inputPationtAF">Do you have Atrial fibrillation ?</label>
               </div>
               <div class="form-group col-lg-4">
                 <br>
                 <br>
-                <input type="checkbox" id="inputPationtLVH" name="checkbox4" value="1" class="control__indicator">
-                <label for="inputPationtGlucose">Do you have Left ventricular hypertrophy ?</label>
+                <input type="checkbox" id="inputPationtLVH" name="inputPationtLVH" value="1" class="control__indicator">
+                <label for="inputPationtLVH">Do you have Left ventricular hypertrophy ?</label>
               </div>
             </div>
             <div class="form-row ">
               
               <div class="form-group col-lg-4">
                 <br>
-                <label for="years">year risk ?</label>
+                <label for="inputyear">year risk ?</label>
           
-                <select name="" class="form-control wide" id="year">
+                <select name="inputyear" class="form-control wide" id="inputyear">
                   <option value=1>1</option>
                   <option value=2>2</option>
                   <option value=3>3</option>
@@ -186,11 +188,15 @@
                 </select>
                 
               </div>
-              
+              <div class="form-group col-lg-4">
+                <br>
+                <label for="inputidnumber">id number</label>
+                <input type="number" class="form-control" id="inputidnumber" name="inputidnumber" placeholder="" step="1" onchange="this.value = Math.max(80, Math.min(9999999999, parseInt(this.value)));">
+              </div>
             </div>
 
             <div class="btn-box">
-              <button type="button" class="btn " onclick="stroke_Results();">Calculate Now</button>
+              <button type="submit" class="btn " onclick="stroke_Results();">Calculate Now</button>
             </div>
           </form>
         </div>
@@ -346,5 +352,34 @@
   <!-- footer section -->
 
 </body>
+<script type="text/javascript">
+  $(document).on('submit','#post-stroke',function(e){
+    e.preventDefault();
+    $.ajax({
+      type:'POST',
+      url:'create/',
+      data:{
+        inputidnumber:$('#inputidnumber').val(),
+        inputPatientAge:$('#inputPatientAge').val(),
+        inputPatientSBPHistory:$('#inputPatientSBPHistory').val(),
+        inputPatientGender:$('#inputPatientGender').val(),
 
+        inputPatientDrugHistory:($("#inputPatientDrugHistory:checked").prop("checked") == true ? 1 : 0),
+        inputPatientDiabetes:($("#inputPatientDiabetes:checked").prop("checked") == true ? 1 : 0),
+        inputPationtSmoke:($("#inputPationtSmoke:checked").prop("checked") == true ? 1 : 0),
+        inputPationtCVD:($("#inputPationtCVD:checked").prop("checked") == true ? 1 : 0),
+        inputPationtAF:($("#inputPationtAF:checked").prop("checked") == true ? 1 : 0),
+        inputPationtLVH:($("#inputPationtLVH:checked").prop("checked") == true ? 1 : 0),
+
+        csrfmiddlewaretoken:$('input[name=csrfmiddlewaretoken]').val()
+
+      },
+      success: function (){
+
+      }
+    });
+  });
+
+  
+</script>
 </html>
