6 new pages add

--- a/digweb/digweb/templates/openVeiw/index.html
+++ b/digweb/digweb/templates/openVeiw/index.html
@@ -411,9 +411,9 @@
               </div>
               <div class="detail-box">
                 <h4>
-                  ADVANCED TECHNOLOGY
+                  What is Artificial Intelligence?
                 </h4>
-                <a href="">
+                <a href="{% url 'dissai_page'%}">
                   Read More
                 </a>
               </div>
@@ -434,9 +434,9 @@
               </div>
               <div class="detail-box">
                 <h4>
-                  24/7 AVAILABILITY
+                  What is digital health?
                 </h4>
-                <a href="">
+                <a href="{% url 'digitalhealth_page'%}">
                   Read More
                 </a>
               </div>
@@ -457,9 +457,9 @@
               </div>
               <div class="detail-box">
                 <h4>
-                  Best Doctors
+                  Why should you take the test?
                 </h4>
-                <a href="">
+                <a href="{% url 'disscuseffect_page'%}">
                   Read More
                 </a>
               </div>
