--- a/digweb/digweb/templates/persianPage/indexpr.html
+++ b/digweb/digweb/templates/persianPage/indexpr.html
@@ -410,10 +410,10 @@
               </div>
               <div class="detail-box">
                 <h4>
-                  ADVANCED TECHNOLOGY
+                  هوش مصنوعی چیست؟
                 </h4>
-                <a href="">
-                  Read More
+                <a href="{% url 'dissaipr_page'%}">
+                  بیشتر
                 </a>
               </div>
             </div>
@@ -433,10 +433,10 @@
               </div>
               <div class="detail-box">
                 <h4>
-                  24/7 AVAILABILITY
+                  سلامت دیجیتال چیست؟
                 </h4>
-                <a href="">
-                  Read More
+                <a href="{% url 'digitalhealthpr_page'%}">
+                  بیشتر
                 </a>
               </div>
             </div>
@@ -456,10 +456,10 @@
               </div>
               <div class="detail-box">
                 <h4>
-                  Best Doctors
+                  چرا باید تست بدهیم؟
                 </h4>
-                <a href="">
-                  Read More
+                <a href="{% url 'disscuseffectpr_page'%}">
+                  بیشتر
                 </a>
               </div>
             </div>
